# isleconsumer-py

./: .gitignore  Makefile  README.md  azure-pipelines.yml  pip-freeze.txt  setup.cfg  setup.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/: index.rst.txt
junit/: test-results.xml
service/: _name.py  _start.py  consumer.py
zdevelop/tests/: conftest.py  test_service.py
zdevelop/tests/files/: 105
zdocs/: swagger.yml
zdocs/source/: conf-template  conf.py
