[version]
target = 0.3
release = 0.3.1

[metadata]
name = isleconsumer
description = a REST service template
author = Billy Peake

[options]
setup_requires = 
	setuptools
install_requires = 
	marshmallow>=3.0.0rc2
	grahamcracker
	spanconsumer
tests_require = 
	pytest
dependency_links = 

[options.extras_require]
dev = 
	black
	autopep8
lint = 
	black
	flake8
	mypy
doc = 
	sphinx
	sphinx-autodoc-typehints
	sphinx_rtd_theme
build = 
	requests
test = 
	pytest-sugar
	pytest-cov
	pytest-html

[flake8]
max-line-length = 88
max-complexity = 10
exclude = 
	*/venvs/*,
	docs/conf.py,
	build,
	dist,
	.git,
	__pycache__,
	tests,
	.tox,
	.eggs,
	.coverage,
	*.egg,
	*_cache
	tests/_reports
	zdevelop/scratch

[pep8]
max-line-length = 88

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
show_error_context = True
no_implicit_optional = True
warn_redundant_casts = True

[mypy-pytest,setuptools]
ignore_missing_imports = True

[mypy-zdevelop.scratch.*]
ignore_errors = True

[tool:pytest]
testpaths = zdevelop/tests
addopts = 
	--cov
	--cov-report=html
	--cov-report=xml:zdevelop/tests/_reports/coverage.xml
	--html=zdevelop/tests/_reports/test_results.html
	--self-contained-html

[coverage:run]
source = service
omit = 
	service/__main__.py
	service/_start.py
	service/_version.py

[coverage:html]
directory = zdevelop/tests/_reports/coverage
title = coverage report for isleconsumer

[build_sphinx]
project = isleconsumer
copyright = '2018, Illuscio'
source-dir = ./zdocs/source
build-dir = ./zdocs/build

